# src/routes/contents.ts
@@ -25,19 +25,6 @@ router.post(
   upload.fields([{ name: 'imageUrls' }]),
   async (req: Request, res: Response, next: NextFunction) => {
     // #swagger.tags = ['Content']
-    // #swagger.summary = 'test'
-    // #swagger.description = 'test'
-    /*  #swagger.requestBody = {
-            required: true,
-            content: {
-                "application/json": {
-                    schema: {
-                        $ref: "#/components/schemas/someSchema"
-                    }
-                }
-            }
-        }
-    */
     try {
       const user = req.user;
 
@@ -89,6 +76,7 @@ router.get(
   '/',
   validatePagination,
   async (req: Request<{}, {}, {}, PaginationOptions>, res: Response, next: NextFunction) => {
+    // #swagger.tags = ['Content']
     try {
       const { size, page, sort } = req.query;
       const {
@@ -116,6 +104,7 @@ router.get(
 );
 
 router.get('/random', async (_, res: Response, next: NextFunction) => {
+  // #swagger.tags = ['Content']
   try {
     const randomContent = await ContentModel.aggregate([{ $sample: { size: 1 } }]);
 
@@ -130,6 +119,7 @@ router.get('/random', async (_, res: Response, next: NextFunction) => {
 });
 
 router.get('/:contentId', async (req: Request<{ contentId: string }>, res: Response, next: NextFunction) => {
+  // #swagger.tags = ['Content']
   try {
     const { contentId } = req.params;
 
@@ -147,6 +137,7 @@ router.patch(
   loginChecker,
   roleChecker(['Creator', 'Admin']),
   async (req: Request<{ contentId: string }>, res: Response, next: NextFunction) => {
+    // #swagger.tags = ['Content']
     try {
       const { contentId } = req.params;
       const { results, ...contentData } = req.body;
@@ -189,6 +180,7 @@ router.delete(
   loginChecker,
   roleChecker(['Creator', 'Admin']),
   async (req: Request<{ contentId: string }>, res: Response, next: NextFunction) => {
+    // #swagger.tags = ['Content']
     try {
       const { contentId } = req.params;
       const user = req.user;
